<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Amora - a Labradora</string>
    <string name="yellow_star">Estrela amarela</string>
    <string name="about_me">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar ante est, in aliquet sapien dapibus at. Donec ut felis sed lectus sodales hendrerit. Nam interdum feugiat diam nec volutpat. Donec ullamcorper nunc fermentum malesuada iaculis. Nunc dignissim lorem id suscipit consectetur. Curabitur euismod ipsum nec dui lacinia porttitor. Mauris id pharetra velit. Vestibulum pellentesque massa at arcu blandit, et egestas diam ullamcorper. Vestibulum egestas, erat in interdum dictum, nulla augue vehicula urna, vel ultricies velit massa at neque. Donec at tellus blandit, faucibus orci quis, porta urna.
\n
Sed scelerisque justo in libero consequat, venenatis eleifend diam rhoncus. Donec accumsan congue ligula. Vestibulum vitae consectetur enim. Nunc nisi libero, elementum at ipsum quis, vestibulum varius orci. Maecenas ornare accumsan augue eget aliquet. Suspendisse condimentum vestibulum scelerisque. Aliquam sapien purus, pulvinar a justo nec, condimentum fermentum elit. Aenean eget justo risus. Fusce ac eleifend nunc. Donec at felis commodo, blandit metus in, sodales felis. Sed gravida consectetur justo. Sed sit amet maximus neque, ac ornare turpis.
\n
Donec eu purus quis nisi imperdiet egestas in eget orci. Nunc aliquam nibh non augue mollis pretium. Nullam ullamcorper tristique porta. Nullam libero erat, posuere imperdiet laoreet rhoncus, aliquet ut eros. Sed quis ullamcorper libero, id consequat augue. Integer in dolor diam. Nunc malesuada consectetur ultricies. Vivamus et condimentum ex, tempor vulputate nulla. Nulla facilisi. Maecenas augue ante, laoreet pretium varius malesuada, ultrices id ipsum. Aenean ut maximus justo. Integer commodo elit nibh, in convallis tortor aliquam eget. Curabitur mattis nisl risus, et rhoncus libero semper id. Vivamus pulvinar dignissim tempus. Curabitur vitae gravida justo, eget suscipit ante.
\n
Donec mollis, tortor quis porttitor dignissim, tellus purus congue arcu, eu molestie nulla magna et enim. Praesent ullamcorper ex at congue semper. Mauris in varius lacus, quis blandit mi. Cras mollis velit libero, et blandit risus aliquet quis. Etiam mattis ex at mauris commodo varius. Suspendisse sed lectus lobortis, ultricies felis at, congue mauris. Donec quis egestas libero. Ut porta lectus eget sem tempus mattis. Maecenas vel tellus vitae ligula suscipit porta vitae nec ex.
\n
Donec varius, nulla ac condimentum suscipit, libero est vestibulum velit, sed gravida risus erat vel elit. Vivamus a pulvinar nisi, vel pharetra velit. Curabitur facilisis mattis sodales. Vestibulum quis dolor at neque faucibus eleifend quis et leo. Praesent a ante est. Quisque eleifend sed mauris eget accumsan. Praesent quis nunc ex. Vivamus arcu odio, sollicitudin eget sagittis ac, vulputate finibus risus. Nullam nec lacus eget mi mollis tristique at non eros. Fusce eget rutrum neque, sed mattis ex. Nunc feugiat, lectus eget rutrum dapibus, augue nisi efficitur augue, id molestie felis urna ut quam. Proin et aliquam purus, vel congue lectus. Fusce eu purus porta arcu pretium euismod mollis eget urna.</string>
    <string name="foto_da_amora">Foto da Amora</string>
    <string name="feito">Feito</string>
</resources>